crates/monochange/tests/snapshots/release_pull_requests__multiline_release_request_body@group.snap
---
source: crates/monochange/tests/release_pull_requests.rs
expression: contents
---
## Prepared release

- command: `release-pr`
- group `sdk` -> `v1.1.0`

## Release notes

### sdk 1.1.0

Grouped release for `sdk`.

### Features

- **add feature.**
  _Packages:_ 🟠 _core_

## Changed files

- Cargo.toml
- changelog.md
- crates/app/Cargo.toml
- crates/core/CHANGELOG.md
- crates/core/Cargo.toml
